<resources>
    <string name="app_name">MovieTunnel</string>
    <string name="error_internet">No internet access, please check WiFi setting</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_top_rated">Top Rated</string>
    <string name="title_popular">Popular</string>
    <string name="title_account">Profile</string>
    <string name="title_now_showing">Now Showing</string>
    <string name="title_favorite">Favorite</string>
    <string name="empty_fragment">Empty Fragment object</string>
    <string name="favorite">Favorite</string>
    <string name="reviews_title">Movie Reviews</string>
    <string name="trailer_title">Trailers</string>
    <string name="movie_details">Movie Details</string>
    <string name="sort_by_release_date">Sort By Release Date</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>

    <string name="pref_sort_label">Sort By</string>
    <string name="pref_sort_by_popularity">Popularity</string>
    <string name="pref_sort_by_rating">Rating</string>
    <string name="pref_sort_key" translatable="false">Sort</string>
    <string name="pref_sort_default_value" translatable="false">popularity.desc</string>
    <string name="pref_sort_by_popularity_value" translatable="false">popularity.desc</string>
    <string name="pref_sort_by_rating_value" translatable="false">vote_average.desc</string>
</resources>
